--- a/frontend/trip_info.html
+++ b/frontend/trip_info.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<title>Trip Info</title>
+		<link href="css/default.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<form method="post" action="trip_info_submit.php">
 			<fieldset>
-				<legend><label>Use Club Card</label></legend>
-				<ul>
+				<legend>Use Club Card</legend>
+				<ul class="col-3">
 					<li>
 						<label for="trip_title">Trip Titel</label>
 						<input type="text" name="trip_title" tabindex="1" style="width: 100%;" />
