--- a/seapal/index.html
+++ b/seapal/index.html
@@ -3,9 +3,16 @@
 <head>
 	<title>SeaPal</title>
 	<!-- CSS -->
-	<link type="text/css" rel="stylesheet" href="include/style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+	<style>
+	body {
+padding-top: 100px;
+    padding-bottom: 40px;
+    }
+	</style>
 	<link type="text/css" rel="stylesheet" href="include/bootstrap/css/bootstrap.min.css" />
-
+	<link type="text/css" rel="stylesheet" href="include/style.css" />
+	
 	<!-- JS -->
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="include/bootstrap/js/bootstrap.min.js"></script>
